# callpython

./: .gitignore  CMakeLists.txt  README.md
callpython/: CMakeLists.txt  callpython.cpp
scripts/: find_max.py
